# smith

./: .clangd  .gitignore  .gitlab-ci.yml  .gitmodules  .mailmap  .sandbox.config  .uberenv_config.json  .viminfo  AGENTS.md  AGENTS.md~  CMakeCache.txt  CMakeLists.txt  CONTRIBUTING.md  GEMINI.md  LICENSE  README.md  REFACTORING_SUMMARY.md  REFACTOR_REVIEW.md  RELEASE-NOTES.md  add_staggered_test.py  all_output.txt  click_and_press_1.sh  compile_commands.json  config-build.py  fix2.py  fix_systems.py  gretl_notracking.md  ideal_test.cpp  improvements.md  iwyu-dry-run.out  iwyu.out  plan.md  release_flags.txt  run_tests_simple.txt  run_tests_with_sanitizers.txt  slirp.out  stress_output_plan.md  suppressions.asan  update_tests.py  visit0000.session  (+1 more)
examples/: CMakeLists.txt  TubeLCE_NoSplit.g  plot_reactions.py
examples/bistable_beam/: CMakeLists.txt  bistable.cpp
examples/buckling/: CMakeLists.txt  cylinder.cpp
examples/conduction/: CMakeLists.txt  simple_conduction.cpp
examples/contact/: CMakeLists.txt  beam_bending.cpp  constraint_twist.cpp  contact_hertzian_2d.cpp  energy_mortar_hertzian_disp.cpp  energy_mortar_hertzian_traction.cpp  energy_mortar_patch_test.cpp  ironing.cpp  ironing_2D.cpp  ironing_2D_circle.cpp  ironing_energy_mortar.cpp  ironing_energy_mortar_2D.cpp  sphere.cpp  twist.cpp  twisted_ironing_2D.cpp
examples/contact/homotopy/: CMakeLists.txt  constraint_twist.cpp  two_blocks.cpp
examples/digital-twins-examples/: CMakeLists.txt  curing_study_driver.cpp  curing_study_driver_nonlinear.cpp  curing_study_driver_nonlinear_with_contact.cpp  first_driver.cpp  indentation_with_contact.cpp  indentation_with_contact_nonlinear.cpp
examples/eos_testing/: CMakeLists.txt  active_eos.cpp  active_eos2.cpp  pnc_eos_v1.cpp  pnc_eos_v2.cpp
examples/explicit/: CMakeLists.txt  dfem_basic_gpu.cpp  dfem_force_gpu.cpp  dfem_gpu.cpp
examples/homotopy/: CMakeLists.txt  homotopy_example.cpp
examples/inertia_relief/: CMakeLists.txt  host-config.cmake.in  inertia_relief_example.cpp  inertia_relief_example2.cpp
examples/korner_examples/: 2x2lattice.cpp  5x5lattice.cpp  5x5lattice_active_eos.cpp  CMakeLists.txt  LC_Helpers.py  Rate_Dependent_Viscous_Lattice.cpp  active_cantilever_metrics.cpp  box_lattice.cpp  double_ring_tensile.cpp  floating_regularized_self_contact.cpp  floating_self_contact_test.cpp  floating_structure_test.cpp  gyroid.cpp  half_lattice_compression_contact.cpp  hole.cpp  lattice_compression_contact.cpp  logpile_lattice.cpp  run_viscous_tests.py  small_lattice.cpp  tupek_regularization.cpp  viscous_lattice.cpp  viscous_lattice_parametrized.cpp  viscous_tensile.cpp
examples/lattices/: CMakeLists.txt  hole_lattice.cpp  holelattice.lua  mylua.lua  plastic_hole_lattice.cpp  plasticholelattice.lua  thermomech.cpp  thermomech.lua  thermomech_test.cpp
examples/lua_loader/: lua_loader.hpp
examples/pnc_eos/: CMakeLists.txt
examples/sentient-materials-physics/: BZ_staggered_thermomechanics.cpp  CMakeLists.txt  PNC_double_network_simple.cpp  PNC_double_network_test.cpp  PNC_double_network_test_visco.cpp  PNC_simple_new.cpp  bibeam_test_2d.cpp  extended_thermomechanics.cpp  square_lattice_test.cpp
examples/sentient-materials-physics/helpers/: cl_parser.hpp  custom_materials.hpp  extended_thermomechanics.hpp  extended_thermomechanics_materials.hpp  quasistatic_thermomechanics.hpp
examples/sentient_materials_si/: CMakeLists.txt  extended_thermomechanics.cpp  extended_thermomechanics.hpp  extended_thermomechanics_materials.hpp  iterative_extended_thermomechanics.cpp  iterative_extended_thermomechanics.hpp  quasistatic_solid.hpp  solid_mechanics_example.cpp  thermomechanics.cpp
examples/simple_conduction/: CMakeLists.txt  simple_conduction.cpp  without_input_file.cpp
examples/solid_mechanics/: CMakeLists.txt  composable_solid_mechanics.cpp
examples/thermoMechEx/: CMakeLists.txt  thermMechSimOnly.cpp
examples/thermo_mechanics/: CMakeLists.txt  composable_thermo_mechanics.cpp  composable_thermo_mechanics_advanced.cpp
examples/tmopWithSerac/: CMakeLists.txt  single_element.cpp  tmopWithSerac2D.cpp  tmopWithSerac2D_ADWithMfem.cpp  tmopWithSerac3D.cpp  tmopWithSeracInitialTesting.cpp  tmop_multi_element.cpp  tmop_shape_aware.cpp
examples/uniaxial/: CMakeLists.txt  uniaxial_tension.cpp
examples/using-with-cmake/: CMakeLists.txt  host-config.cmake.in  serac_example.cpp
examples/viscoelastic/: CMakeLists.txt  viscoelastic_buckling.cpp
korner_examples/: 01_test.cpp  02_implicit_velocity.cpp  03_implicit_velocity_but_better.cpp  04_nominal_lattice.cpp  05_optimal_lattice.cpp  06_snap_array_nominal.cpp  07_snap_array_optimal.cpp  08_quasistatic_thermomechanics.cpp  09_viscoelastic_cyclic_tests.cpp  10_snap_array_optimal_bkz.cpp  11_snap_array_optimal_bkz_visco.cpp  CMakeLists.txt  calculate_reactions.hpp  custom_materials.hpp  quasistatic_thermomechanics.hpp  viscous_solid_mechanics.hpp
src/docs/doxygen/: CMakeLists.txt  Doxyfile.in
src/drivers/: CMakeLists.txt  serac.cpp  smith.cpp
src/serac/: CMakeLists.txt  serac_config.hpp.in
src/serac/differentiable_numerics/: CMakeLists.txt  differentiable_physics.cpp  differentiable_physics.hpp  differentiable_utils.cpp  differentiable_utils.hpp  explicit_dynamic_solve.hpp  field_state.cpp  field_state.hpp  lumped_mass_explicit_newmark_state_advancer.cpp  lumped_mass_explicit_newmark_state_advancer.hpp  lumped_mass_weak_form.hpp  mechanics.cpp  mechanics.hpp  serac_mechanics.cpp  serac_mechanics.hpp  serac_qoi_integrators.hpp  state_advancer.cpp  state_advancer.hpp  timestep_estimator.hpp
src/serac/gretl/: CMakeLists.txt  checkpoint.hpp  create_state.hpp  data_store.cpp  data_store.hpp  data_store_for_testing.hpp  double_state.hpp  print_utils.hpp  state.hpp  state_base.cpp  state_base.hpp  state_data.hpp  state_data_base.cpp  state_data_base.hpp  upstream_state.hpp  vector_state.cpp  vector_state.hpp
src/serac/infrastructure/: CMakeLists.txt  about.cpp  about.hpp  accelerator.cpp  accelerator.hpp  application_manager.cpp  application_manager.hpp  cli.cpp  cli.hpp  debug_print.hpp  git_sha.hpp.in  (+13 more)
(+3302 files in other folders)
